--- a/styles/styles.css
+++ b/styles/styles.css
@@ -120,7 +120,7 @@ table {
 
 /* Responsive Design for mobile phones  */
 @media only screen and (max-width: 768px) {
-    main {
+    body {
             display: flex;
             flex-direction: column;
             justify-content: center;
