--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@ body {
 }
 .container {
         background-color: white;
-        width: 650px;
+        max-width: 60%;
         height: auto;
         padding: 1.5rem;
         border-radius: 20px;
@@ -20,7 +20,7 @@ body {
 }
 .container img {
     height: 100%;
-    width: 100%;
+    max-width: 100%;
     border-radius: 16px;
 }
 header{
@@ -119,8 +119,7 @@ table {
 
 /* Responsive Design for mobile phones  */
 @media only screen and (max-width: 768px){
-    body {
-        display: flex;
-        max-width : 100%
-        }
+    body{
+        max-width: 100%;
+    }
     }
