--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,8 @@ body {
         display :flex;
         flex-direction: column;
         background-color: white;
-        max-width: 60%;
+        max-width: 100%;
+        width: 650px;
         height: auto;
         padding: 1.5rem;
         border-radius: 20px;
