--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 body {
     background-color: hsl(30, 54%, 90%);
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     align-self: center;
